# zem-intercessory-prayer-srv

./: .env  Cargo.toml
.github/instructions/: ddd.instructions.md
.github/skills/create-readme/: SKILL.md
.github/skills/ddd-entity/: SKILL.md
.github/skills/persistence/: SKILL.md  Skill.md
.github/skills/rust-clean-arch-errors-rs/: SKILL.md
migrations/: 002_init_tables.sql  003_alter_organizations_billing_nullable.sql
src/application/: README.md  mod.rs
src/application/common/: mod.rs
src/application/common/behaviours/: mod.rs
src/application/common/errors/: mod.rs
src/application/common/mappings/: mod.rs
src/application/common/models/: mod.rs
src/application/common/security/: mod.rs
src/application/common/traits/: mod.rs
src/application/organizations/: mod.rs
src/application/user/: mod.rs
src/domain/: errors.rs  mod.rs  readme.md
src/domain/entities/: church.rs  member.rs  mod.rs  organization.rs  prayer_request.rs  prayer_request_program.rs  program.rs
src/domain/enums/: contact_method.rs  mod.rs  payment_method.rs  prayer_request_scope.rs  prayer_request_status.rs  program_type.rs  role.rs
src/domain/errors/: mod.rs
src/domain/events/: mod.rs
src/domain/repositories/: church_repository.rs  member_repository.rs  mod.rs  organization_repository.rs  prayer_request_program_repository.rs  prayer_request_repository.rs  program_repository.rs
src/domain/value_objects/: address.rs  billing_info.rs  church_id.rs  contact_info.rs  email.rs  member_id.rs  mod.rs  organization_id.rs  prayer_request_id.rs  prayer_request_program_id.rs  program_id.rs  user_id.rs
src/infrastructure/: README.md  mod.rs
src/infrastructure/external_services/: mod.rs
src/infrastructure/external_services/email/: mod.rs
src/infrastructure/external_services/oauth_providers/: mod.rs
src/infrastructure/messaging/: mod.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/storage_systems/: mod.rs
src/interface/: ReadMe.md
src/interface/auth/: mod.rs
src/interface/http/routes/: mod.rs
(+24 files in other folders)
