[package]
name = "zem-intercessory-prayer-srv"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }

anyhow = "1.0.102"
thiserror = "2.0.18"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

chrono = "0.4.44"
uuid = { version = "1.21.0", features = ["serde", "v4"] }


regex = "1.12.3"

fluidvalidation = { path = "/home/johngleason/Projects/Rust/zem-consent/fluidvalidation" }
