[package]
name = "zem-intercessory-prayer-srv"
version = "0.1.0"
edition = "2024"


[dependencies]
#   -- web server --
axum = "0.8.8"

#   -- Trace logging --
tracing = "0.1.37"
tracing-subscriber = "0.3.23"

#   -- async --
tokio = { version = "1.51.0", features = ["full"] }
# TODO: look into "trait_variant"
async-trait = "0.1.89"

#   -- json --
serde = { version = "1.0.228", features = ["derive"] }


anyhow = "1.0.102"
thiserror = "2.0.18"
#   -- database --
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "uuid", "json"] }
#   -- others --
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
uuid = { version = "1.23.0", features = ["v4", "v7", "fast-rng", "serde"] }
derive_more = { version = "2.1.1", features = ["from", "display"] }
regex = "1.12.3"

fluidvalidation = { path = "/home/johngleason/Projects/Rust/zem-consent/fluidvalidation" }
